Fixed the readability of the text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,10 @@ header {
 .header__logo{
     font-size: 30px;
     font-weight: 700;
-    background-image: linear-gradient(90deg, #8b00ff, #ffc0cb);
+    background-image: linear-gradient(90deg, #8b00ff, #fda5b3);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    background-clip: 0;
 }
 /* Navigation */
 .nav{
@@ -58,14 +59,15 @@ header {
 
 /* Intro */
 .intro {
-    display: flex;
-    flex-direction: column;
+    display:flex;
+    flex-direction:column;
     justify-content:center;
     width: 100%;
     height: 100vh;
-    background: url(https://i.pinimg.com/originals/6e/85/fb/6e85fb615f9d4b15f41dc36451c36b2b.jpg) center
+    background: url("../images/intro3.jpg") center
     no-repeat;
     background-size: cover;
+    text-shadow: 2px 2px 2px #000;
     
 }
 
@@ -78,7 +80,7 @@ header {
 }
 
 .intro__title {
-    font-size: 50px;
+    font-size: 60px;
     font-weight: 700;
     color: #fff;
     text-transform: uppercase;
